--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "bubblepop",
+  "name": "bubble-pop-game",
   "version": "1.0.0",
+  "description": "A simple bubble pop game with a leaderboard.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "sqlite": "^5.1.1",
-    "winston": "^3.14.2"
+    "express": "^4.17.1",
+    "sqlite3": "^5.0.0",
+    "winston": "^3.3.3",
+    "dotenv": "^10.0.0"
   }
 }
