--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "better-sqlite3": "^11.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sqlite3": "^5.0.0",
-    "winston": "^3.3.3",
-    "dotenv": "^10.0.0"
+    "winston": "^3.3.3"
   }
 }
